Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current repository (svn)
====================================

 o #13786 fixed bug on DbWatcher (TimestampChangeDetector) when number of digits changed it 
   previously did not detect change.
  
 o #13764 Added constructors with no global to ClientProperties (other are deprecated)

 o #13753 removed Global from EncodableData

 o #13750 added flag copyOnMove to file poller (allows archiving on remotely mounted file systems)

 o #13726,#13727 Removed jclark-omquery-xpath engine dependeny from xmlBlaster core for JDK >= 1.5

 o #137187,#13718 Ported to use native XML parser when running with >= JDK 1.5
   But still uses crimson for JDK 1.2,1.3 and 1.4
   See
    http://www.xmlBlaster.org/FAQ.html#xml-parser
    http://www.xmlblaster.org/xmlBlaster/doc/client-api/org/xmlBlaster/util/XmlNotPortable.html
   - xmlBlaster.properties has changed, please use the new template
   - engine.service.rdbms requirements will only run with JDK 1.5 from now on

 o #13713,#13714 C++ Fixed progress listener registration in offline mode

 o #13710 fixed an empty type attr in EncodableData is now a String. Parsing of 
   ClientProperty is now autoencoding on unencoded strings.

 o #13709 DbWatcher has changed the schema. Now the isSigned attribute is 'signed',
   isReadOnly is 'readOnly' and isNullable is 'nullable'. The later is an integer.
   Added the parameter 'changeDetector.postUpdateStatement' to DbWatcher configuration.

 o #13702 Added memory heap observation, see '-xmlBlaster/jmx/observeLowMemory true' in
   http://www.xmlblaster.org/xmlBlaster/doc/requirements/admin.jmx.html

 o #13694 Sending JMX notifications on client login/logout and on log.error


Changes for 1.0.6 [2005-08-10] #13689 "Xmas release patch 6"
============================================================
