@@ -1,0 +1,2 @@
+See xmlBlaster/src/java/org/xmlBlaster/client/protocol/http/applet/README
+See http://www.xmlblaster.org/xmlBlaster/doc/requirements/client.java.applet.html
